website/code/hash-icpp.log
BUILD COMMANDS FOR: hash.icpp

Mon Oct 31 22:06:37 PST 2005

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  hash.c++ -o hash.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc hash.c++.o -o hash.icpp_run -O3 -ip -static -unroll  
hash.c++(46): error: hash_map is not a template
      typedef hash_map<const char*, int, str_hash_compare> HM;
              ^

compilation aborted for hash.c++ (code 2)
make[2]: [hash.icpp_run] Error 2 (ignored)
rm: cannot remove `hash.c++.o': No such file or directory
rm: cannot remove `hash.o': No such file or directory
make[2]: [hash.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

hash.icpp_run %A
Error, could not exec hash.icpp_run 40000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/hash:/opt/shootout/shootout/bench/hash/tmp:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
